<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/user_info_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    tools:context=".view.tabs.UserInfoPage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:background="@color/material_green_500"
            android:orientation="vertical"
            android:padding="20dp">

            <androidx.cardview.widget.CardView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="16dp"
                android:elevation="12dp"
                app:cardCornerRadius="40dp">

                <ImageView
                    android:id="@+id/user_info_profile_picture"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:contentDescription="@string/profile_picture_content_desc"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/ic_anon_user_48dp" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/display_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/display_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="22sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/user_info_favorsCreated"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:drawableStart="@drawable/ic_create_black_24dp"
            android:drawablePadding="20dp"
            android:padding="15dp"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/user_info_favorsAccepted"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_accepted_black_24dp"
            android:drawablePadding="20dp"
            android:padding="15dp"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/user_info_favorsCompleted"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_completed_black_24dp"
            android:drawablePadding="20dp"
            android:padding="15dp"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:id="@+id/user_info_likes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:textSize="18sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/user_info_dislikes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:textSize="18sp" />

        </LinearLayout>

        <!--        <TextView-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_gravity="center"-->
        <!--            android:layout_marginTop="15dp"-->
        <!--            android:text="@string/feedback_description"-->
        <!--            android:textSize="18sp" />-->

        <!--        <LinearLayout-->
        <!--            android:id="@+id/feedback_buttons_container"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:orientation="horizontal"-->
        <!--            android:padding="10dp">-->

        <!--            <ImageButton-->
        <!--                android:id="@+id/like_button"-->
        <!--                android:layout_width="wrap_content"-->
        <!--                android:layout_height="wrap_content"-->
        <!--                android:layout_gravity="center"-->
        <!--                android:layout_marginStart="100dp"-->
        <!--                android:background="@android:color/transparent"-->
        <!--                android:contentDescription="Like Button"-->
        <!--                android:padding="15dp"-->
        <!--                android:src="@drawable/ic_like_black_48dp" />-->

        <!--            <View-->
        <!--                android:layout_width="0dp"-->
        <!--                android:layout_height="0dp"-->
        <!--                android:layout_weight="1" />-->

        <!--            <ImageButton-->
        <!--                android:id="@+id/dislike_button"-->
        <!--                android:layout_width="wrap_content"-->
        <!--                android:layout_height="wrap_content"-->
        <!--                android:layout_gravity="center"-->
        <!--                android:layout_marginEnd="100dp"-->
        <!--                android:background="@android:color/transparent"-->
        <!--                android:contentDescription="Dislike button"-->
        <!--                android:padding="15dp"-->
        <!--                android:src="@drawable/ic_dislike_black_48dp" />-->

        <!--        </LinearLayout>-->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:text="@string/report_description"
            android:textSize="18sp" />

        <Button
            android:id="@+id/report_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="30dp"
            android:padding="15dp"
            android:text="@string/report_user_text"
            android:textSize="16sp"
            android:theme="@style/WarnButton" />

    </LinearLayout>

</ScrollView>