...
    <!-- User Info Page -->
    <string name="favors_created_format">Favors created: %d</string>
    <string name="favors_accepted_format">Favors accepted: %d</string>
    <string name="favors_completed_format">Favors completed: %d</string>
    <string name="likes_format">Positive\nfeedbacks: %d</string>
    <string name="dislikes_format">Negative\nfeedbacks: %d</string>
    <string name="feedback_message">Feedback received! Thanks for sharing your opinion</string>
    <string name="report_user_message">User has been reported! Thanks for your help</string>
    <string name="report_user_text">Report user</string>
    <string name="report_description">Report the user in case of inappropriate behaviour</string>
    <string name="feedback_description">Rate your experience with this user to help others</string>
    <string name="positive_feedback">All good!</string>
    <string name="negative_feedback">Bad experience</string>
    <string name="change_profile_picture_title">Please upload or capture a picture</string>
...
